--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -6,14 +6,14 @@
 	<meta name="description" content="">
 	<meta name="author" content=""><!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]--><!--//-->
 	
-    <link href="{{ site.url }}/css/bootstrap.css" rel="stylesheet">
+    <link href="./css/bootstrap.css" rel="stylesheet">
  	<style type="text/css">
       body {
         padding-top: 60px;
         padding-bottom: 40px;
       }
     </style>
-	<link href="{{ site.url }}/css/bootstrap-responsive.css" rel="stylesheet">
+	<link href="./css/bootstrap-responsive.css" rel="stylesheet">
 	<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 	
 	<script type="text/javascript">
